<resources>
    <string name="app_name">Gestor de Cuentas Rápidas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gestor de Cuentas Rápidas</string>
    <string name="nav_header_subtitle">GestordeCuentasRápidas@Info.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_procuts">Productos</string>
    <string name="menu_gallery">Fotos</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_web">Web</string>
    <string name="menu_buttons">Botones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>