<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gestordecuentasrpidas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.gestordecuentasrpidas.ui.product.ProductFragment"
        android:label="@string/menu_procuts"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_videos"
        android:name="com.example.gestordecuentasrpidas.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_videos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_web"
        android:name="com.example.gestordecuentasrpidas.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_galeria"
        android:name="com.example.gestordecuentasrpidas.ui.galeria.GaleriaFragment"
        android:label="@string/menu_galeria"
        tools:layout="@layout/fragment_galeria" />
</navigation>